# thinslice

./: .gitignore  BBStudies.cxx  BackgroundFit.cxx  BeamNtuple.C  BeamNtuple.h  BeamSampleAna.cxx  BeamSampleAna.h  BeamTreeReproducer.cxx  BeamTreeReproducer.h  BeamVirtualDetector.C  BeamVirtualDetector.h  Beam_Study.cxx  Beam_Study.h  BetheBloch.cxx  BetheBloch.h  CMakeLists.txt  CalcXS.cxx  EffEval.cxx  EffEval.h  EventSelection.h  EventType.h  FillHist_Helper.cxx  FillHist_Helper.h  HadAna.cxx  HadAna.h  HypFit.cxx  HypFit.h  LICENSE  PionXsec.cxx  PionXsec.h  ProtonEnergy.cxx  ProtonEnergy.h  ProtonInel.cxx  ProtonInel.h  README.md  RecoDaughter.cxx  RecoDaughter.h  RunBeamSampleAna.cxx  RunBeamTreeReproducer.cxx  RunBeam_Study.cxx  (+19 more)
files/: exclusive_xsec.root  proton_cross_section.root
json/: BeamSampleAna.json  BeamSampleAna_0.5GeV.json  BeamSampleAna_1.0GeV.json  BeamSampleAna_2.0GeV.json  Beam_Study.json  HypFit.json  PionXsec.json  bkgfit.json  bkgfitMC.json  config.json  effval.json  penergy.json  xs.json  xsMC.json
macros/: makeXS.C  plot.C  plotAngCorr.C  plotAngle.C  plotTemplates.C  plotXYZ.C  plotbkgfits.C  ploteffpur.C  plotincE.C  plotslices.C
macros/effval/: plot.C
macros/pion/: makeXS.C  momentum_reweight.ipynb  muon_reweight.C  plot.C  plotAngCorr.C  plotAngle.C  plotTemplates.C  plotXS.C  plotXS_data.C  plotXYZ.C  plotbkgfits.C  ploteffpur.C  plotincE.C  plotslices.C
macros/proton/: makeXS.C  plot.C  plotXYZ.C  plotincE.C
